<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:fitsSystemWindows="false"
    tools:theme="@style/ChiliPhotoPicker.Dark">

    <FrameLayout
        android:id="@+id/design_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/bg_picker"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="256dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/picker_title"
                android:textAppearance="@style/TextAppearance.PhotoPicker.Button"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/quota"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:gravity="end"
                android:textAlignment="viewEnd"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/title"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/gallery_container"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:background="?selectableItemBackground"
                app:layout_constraintEnd_toStartOf="@id/camera_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/quota">

                <TextView
                    android:id="@+id/gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:drawablePadding="14dp"
                    android:gravity="center"
                    android:text="@string/picker_gallery"
                    android:textAppearance="@style/TextAppearance.PhotoPicker.Button"
                    app:drawableStartCompat="?pickerGalleryIcon" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/camera_container"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:background="?selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/gallery_container"
                app:layout_constraintTop_toBottomOf="@id/quota">

                <TextView
                    android:id="@+id/camera"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:drawablePadding="14dp"
                    android:gravity="center"
                    android:text="@string/picker_camera"
                    android:textAppearance="@style/TextAppearance.PhotoPicker.Button"
                    app:drawableStartCompat="?pickerCameraIcon" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/text_container"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:background="?selectableItemBackground"
                app:layout_constraintEnd_toStartOf="@id/poll_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/camera_container">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:drawablePadding="14dp"
                    android:gravity="center"
                    android:text="@string/picker_text"
                    android:textAppearance="@style/TextAppearance.PhotoPicker.Button"
                    app:drawableStartCompat="?pickerTextIcon" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/poll_container"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:background="?selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_container"
                app:layout_constraintTop_toBottomOf="@id/camera_container">

                <TextView
                    android:id="@+id/poll"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:drawablePadding="14dp"
                    android:gravity="center"
                    android:text="@string/picker_poll"
                    android:textAppearance="@style/TextAppearance.PhotoPicker.Button"
                    app:drawableStartCompat="?pickerPollIcon" />
            </FrameLayout>

            <View
                android:id="@+id/barrier2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?pickerDividerColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_container" />

            <TextView
                android:id="@+id/empty_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:gravity="center"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/picker_empty_media"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/pickerPrimaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barrier2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/photos"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:padding="2dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barrier2"
                app:spanCount="3"
                tools:listitem="@layout/view_pickable_image" />

            <include
                layout="@layout/view_grant_permission"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barrier2" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barrier2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>